# msgraph2

./: Makefile  README.md  pyproject.toml
msgraph/: __init__.py
