[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "msgraph2"
dynamic = ["version"]
dependencies = ["requests"]
authors = [
  { name="jhunt" },
]
description = "A Pythonic interface to Microsoft's Graph API"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://github.com/jhunt/msgraph2/blob/main/README.md"
Issues = "https://github.com/jhunt/msgraph2/issues"
Source = "https://github.com/jhunt/msgraph2"

[tool.setuptools_scm]
